MAINTAINERCLEANFILES = \
Makefile.in

AM_CPPFLAGS = \
-I. \
-I$(top_srcdir)/src/include \
-I$(top_srcdir)/external/libargb \
@ENESIM_CFLAGS@

noinst_LTLIBRARIES = libenesim_renderer.la

libenesim_renderer_la_SOURCES = \
enesim_renderer_background.c \
enesim_renderer_checker.c \
enesim_renderer_circle.c \
enesim_renderer_clipper.c \
enesim_renderer_compound.c \
enesim_renderer_dispmap.c \
enesim_renderer_ellipse.c \
enesim_renderer_figure.c \
enesim_renderer_gradient.c \
enesim_renderer_gradient_linear.c \
enesim_renderer_gradient_radial.c \
enesim_renderer_grid.c \
enesim_renderer_hswitch.c \
enesim_renderer_image.c \
enesim_renderer_importer.c \
enesim_renderer_path.c \
enesim_renderer_perlin.c \
enesim_renderer_rectangle.c \
enesim_renderer_raddist.c \
enesim_renderer_shape.c \
enesim_renderer_stripes.c \
enesim_renderer_transition.c

libenesim_renderer_la_LIBADD =

libenesim_renderer_la_DEPENDENCIES =

